--- a/ERP/accounting/templates/accounting/partials/journal_lines_table.html
+++ b/ERP/accounting/templates/accounting/partials/journal_lines_table.html
@@ -1,28 +1,27 @@
 {% load widget_tweaks %}
-{{ line_formset.management_form }}
-<div class="table-responsive">
-  <table class="table table-sm align-middle mb-0">
-    <thead class="table-light">
-      <tr>
-        <th scope="col" style="width:3%">#</th>
-        <th scope="col" style="width:20%">Account</th>
-        <th scope="col" style="width:25%">Description</th>
-        <th scope="col" style="width:10%" class="text-end">Debit</th>
-        <th scope="col" style="width:10%" class="text-end">Credit</th>
-        <th scope="col" style="width:12%">Department</th>
-        <th scope="col" style="width:12%">Project</th>
-        <th scope="col" style="width:12%">Cost Center</th>
-        <th scope="col" style="width:6%"></th>
-      </tr>
-    </thead>
-    <tbody id="journal-lines">
-      {% for form in line_formset.forms %}
-        {% include 'accounting/partials/journal_line_form.html' with form=form %}
-      {% empty %}
-        <tr>
-          <td colspan="9" class="text-center text-muted py-3">No lines yet. Use "Add Line" to start.</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
+{% with bound_formset=formset %}
+{{ bound_formset.management_form }}
+<table id="journal-grid" class="table table-sm table-hover mb-0">
+  <thead class="table-light">
+    <tr>
+      <th class="position-relative">Account<span class="resize-handle"></span></th>
+      <th class="position-relative">Description<span class="resize-handle"></span></th>
+      <th class="text-end position-relative">Debit<span class="resize-handle"></span></th>
+      <th class="text-end position-relative">Credit<span class="resize-handle"></span></th>
+      <th class="position-relative">Cost Center<span class="resize-handle"></span></th>
+      <th style="width:40px;"></th>
+    </tr>
+  </thead>
+  <tbody id="journal-grid-body">
+    {% for form in bound_formset.forms %}
+      {% include "accounting/partials/journal_line_table_row.html" with form=form %}
+    {% empty %}
+    <tr>
+      <td colspan="6" class="text-center text-muted py-3">No lines configured.</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+{% include "accounting/partials/line_actions_panel.html" %}
+<div id="validation-messages" class="mt-2"></div>
+{% endwith %}
