--- a/ERP/printing/templates/printing/journal_classic.html
+++ b/ERP/printing/templates/printing/journal_classic.html
@@ -185,6 +185,7 @@
 </style>
 
 <div class="print-surface" id="journalPrintSurface">
+  {% include "printing/_running_header.html" %}
   <div class="print-header">
     <div class="org-header-left">
       <div class="logo-box"><span>LOGO</span></div>
